# iravid.github.io

./: .gitignore  .gitmodules  CNAME  LICENSE  archive.html  github-blog.cabal  index.html  site.hs
css/: base.css  mobile.css  pygments.css
posts/: Using cats with reactive-kafka.org  contravariant-functors.html  contravariant-functors.md  fp-and-spark.html  resource-management.html  slick-and-shapeless.html  using-cats-with-reactive-kafka.html  using-cats-with-reactive-kafka.md
templates/: default.html  head.html  post-list.html  post.html  sidebar.html
