name:                github-blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iravid/github-blog#readme
license:             BSD3
license-file:        LICENSE
author:              Itamar Ravid
maintainer:          iravid@iravid.com
copyright:           2017 Itamar Ravid
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable github-blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       typed-process,
                       mtl,
                       filepath,
                       bytestring
